--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^18.18.0",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.4.0",
+    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
