--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,9 @@
   "routes": [
     {
       "src": "/api/tasks",
-      "dest": "/api/index.js"
+      "dest": "/api/index.js",
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
   ]
 }
